<resources>
  <string name="app_name">ROYF_Android</string>

  <string name="erreur">Erreur</string>

  <string name="action_modifier">Modifier</string>
  <string name="action_supprimer">Suprimer</string>
  <string name="action_annuler">Annuler</string>
  <string name="action_appeler">Appeler</string>
  <string name="action_valider">Valider</string>
  <string name="action_envoyer">Envoyer</string>
  <string name="action_envoyer_sms">Envoyer un SMS</string>

  <string name="attention_champs_vides">Des champs obligatoires sont vides</string>
  <string name="attention_mauvais_format_telephone">Format de numéro de téléphone invalide</string>
  <string name="attention_mauvais_format_email">Format d\'adresse courriel invalide</string>

  <string name="info_voir">Voir</string>
  <string name="info_vous_avez">Vous avez</string>
  <string name="info_vous_avez_pas">Vous n\'avez aucune</string>
  <string name="info_a_faire_aujoudhui">à faire aujourd\'hui</string>
  <string name="info_a_faire_cette_semaine">à faire cette semaine</string>
  <string name="info_a_faire_ce_mois">à faire ce mois</string>
  <string name="info_urgence_bas_et_plus">à urgence basse et +</string>
  <string name="info_urgence_moyen_et_plus">à urgence moyenne et +</string>
  <string name="info_urgence_haut">à urgence haute</string>
  <string name="info_envoie_dun_sms">Envoie d\'un SMS</string>
  <string name="info_entrer_votre_message">Veuillez entrez votre message</string>
  <string name="info_aucune_tache_assignee">Aucune tâche assignée</string>

  <string name="tache">Tâche</string>
  <string name="taches">Tâches</string>
  <string name="tache_assignee">tâche assignée</string>
  <string name="taches_assignees">tâches assignées</string>
  <string name="tache_nom">Nom</string>
  <string name="tache_description">Description</string>
  <string name="tache_date">Date d\'échéance</string>
  <string name="tache_urgence">Niveau d\'urgence</string>
  <string name="tache_employe_assigne">Employé assigné</string>
  <string name="tache_aucun_employe">Aucun employé assigné</string>
  <string name="tache_due_pour">Due pour</string>
  <string name="tache_ajoutee">Tache ajoutée</string>
  <string name="tache_modifiee">Tache modifiée</string>
  <string name="tache_supprimee">Tache supprimée</string>

  <string name="tache_urgence_bas">Urgence basse</string>
  <string name="tache_urgence_moyen">Urgence moyenne</string>
  <string name="tache_urgence_haut">Urgence haute</string>

  <string name="employe_nom">Nom</string>
  <string name="employe_email">Adresse courriel</string>
  <string name="employe_telephone">Numéro de téléphone</string>
  <string name="employe_poste">Poste</string>
  <string name="employe_ajoute">Employé ajouté</string>
  <string name="employe_modifie">Employé modifié</string>
  <string name="employe_supprime">Employé supprimé</string>

  <string name="pref_toasts">Avertissements Toasts</string>
  <string name="pref_toasts_resume">Activer, ou non, les popups de Toasts en lien le nombre de tâches à faire</string>
  <string name="pref_toasts_frequence">Fréquence</string>
  <string name="pref_toasts_frequence_resume">Temps entre les Toasts : %s</string>
  <string name="pref_toasts_laps_temps">Laps de temps</string>
  <string name="pref_toasts_laps_temps_resume">Laps de temps pour calculer le nombre de Toasts : %s</string>
  <string name="pref_toasts_urgence">Niveau d\'urgence</string>
  <string name="pref_toasts_urgence_resume">Affiche les tâches avec un niveau d\'urgence : %s ou supérieur</string>
  <string name="pref_toasts_affichage">Temps d\'affichage</string>
  <string name="pref_toasts_affichage_resume">Temps d\'affichage des Toasts : %s</string>
  <string name="pref_langue">Langue</string>
  <string name="pref_langue_resume">Langue générale de l\'application : %s</string>

  <string-array name="pref_toasts_frequence_noms">
    <item>Une journée</item>
    <item>Une heure</item>
    <item>Une demi-heure</item>
    <item>Dix minutes</item>
    <item>Une minute</item>
    <item>Trente secondes</item>
    <item>Jamais</item>
  </string-array>
  <string-array name="pref_toasts_frequence_valeurs">
    <item>86400</item>
    <item>3600</item>
    <item>1800</item>
    <item>600</item>
    <item>60</item>
    <item>30</item>
    <item>0</item>
  </string-array>
  <string-array name="pref_toasts_laps_temps_noms">
    <item>Aujourd\'hui</item>
    <item>Cette semaine</item>
    <item>Ce mois</item>
  </string-array>
  <string-array name="pref_toasts_laps_temps_valeurs">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string-array name="pref_toasts_urgence_noms">
    <item>Bas</item>
    <item>Moyen</item>
    <item>Haut</item>
  </string-array>
  <string-array name="pref_toasts_urgence_valeurs">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string-array name="pref_toasts_affichage_noms">
    <item>Court</item>
    <item>Long</item>
  </string-array>
  <string-array name="pref_toasts_affichage_valeurs">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string-array name="pref_langue_noms">
    <item>Français</item>
    <item>Anglais</item>
    <item>Créole</item>
  </string-array>
  <string-array name="pref_langue_valeurs">
    <item>fr</item>
    <item>en</item>
    <item>crp</item>
  </string-array>

  <string name="titre_taches_liste">Liste des tâches</string>
  <string name="aucune_tache">Vous n\'avez pas de tâche… pour l\'instant.</string>
  <string name="tache_filtre_tous_les_employes">Tous les employés</string>
  <string-array name="tache_filtre_filtres">
    <item>Aucun filtre</item>
    <item>Date</item>
    <item>Employé</item>
    <item>Niveau d\'urgence</item>
    <item>Complétion</item>
  </string-array>
  <string-array name="tache_filtre_dates">
    <item>Toutes les dates</item>
    <item>Aujourd\'hui</item>
    <item>Cette semaine</item>
    <item>Ce mois</item>
  </string-array>
  <string-array name="tache_filtre_urgences">
    <item>Tous les niveaux d\'urgence</item>
    <item>Bas</item>
    <item>Moyen</item>
    <item>Haut</item>
  </string-array>
  <string-array name="tache_filtre_fait">
    <item>Toutes les tâches</item>
    <item>Tâches en cours</item>
    <item>Tâches complétées</item>
  </string-array>
  <string-array name="tache_filtre_urgences_modifier">
    <item>Urgence basse</item>
    <item>Urgence moyenne</item>
    <item>Urgence haute</item>
  </string-array>

  <string name="titre_tache">Détails d\'une tâche</string>
  <string name="titre_activity_modifier_tache">Modification d\'une tâche</string>
  <string name="titre_activity_ajout_tache">Nouvelle tâche</string>

  <string name="titre_employes_liste">Liste des employés</string>
  <string name="aucun_employe">Vous n\'avez pas d\'employé (sur l\'application)</string>

  <string name="titre_activity_employe">Détails d\'un employé</string>
  <string name="titre_activity_modifier_employe">Modification d\'un employé</string>
  <string name="titre_activity_ajouter_employe">Nouvel employé</string>
  <string name="titre_prefs">Préférences</string>
</resources>