<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.TacheActivity">

  <include
    layout="@layout/toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
      android:id="@+id/tv_tache_nom"
      android:layout_marginTop="65dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentStart="true"
      tools:text="@string/tache_nom"
      android:textAppearance="@android:style/TextAppearance.Material.Title"
      android:textSize="20sp"/>

    <CheckBox
      android:id="@+id/cb_tache_fait"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="65dp"
      android:layout_alignParentEnd="true"
      android:clickable="false"
      style="@android:style/Widget.Material.Light.CompoundButton.CheckBox" />

    <TextView
      android:id="@+id/tv_tache_urgence"
      android:text="@string/tache_urgence"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cb_tache_fait"
      android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

    <TextView
      android:id="@+id/tv_tache_description"
      android:text="@string/tache_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_below="@+id/tv_tache_urgence"
      android:layout_alignParentStart="true" />

    <TextView
      android:id="@+id/tv_tache_date"
      android:text="@string/tache_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tv_tache_description"
      android:layout_alignParentStart="true"
      android:layout_marginTop="10dp"/>

    <Button
      android:id="@+id/btn_tache_employe_assigne"
      android:text="@string/tache_employe_assigne"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tv_tache_date"
      android:layout_alignParentStart="true"
      android:layout_marginTop="10dp"
      style="@android:style/Widget.Material.Button"
      android:background="@color/colorAccent"
      android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"/>
  </RelativeLayout>

</RelativeLayout>