<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/content_edit_task"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context=".fragments.MettreAJourTacheFragment">

  <EditText
    android:id="@+id/et_tache_nom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:inputType="text"
    android:hint="@string/tache_nom"
    android:ems="10"
    android:textAppearance="@android:style/TextAppearance.Material.Title"
    android:textSize="20sp"/>

  <CheckBox
    android:id="@+id/cb_tache_fait"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
    />

  <Spinner
    android:id="@+id/sp_tache_urgence"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/et_tache_nom"
    android:layout_marginTop="10dp"
    android:layout_alignParentStart="true"
    android:inputType="text"
    android:text="@string/tache_urgence"
    android:ems="10"
    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
    android:entries="@array/tache_filtre_urgences_modifier"/>

  <EditText
    android:id="@+id/et_tache_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/sp_tache_urgence"
    android:layout_alignParentStart="true"
    android:inputType="text"
    android:hint="@string/tache_description"
    android:ems="10"
    android:textAppearance="@android:style/TextAppearance.Material.Small"
    android:fontFamily="sans-serif"/>

  <Button
    android:id="@+id/btn_tache_date"
    android:text="@string/tache_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/et_tache_description"
    android:layout_alignParentStart="true"
    android:layout_marginTop="10dp"
    android:onClick="showDatePickerDialog"/>

  <Spinner
    android:id="@+id/sp_tache_employe_assigne"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btn_tache_date"
    android:layout_marginTop="10dp"
    android:layout_alignParentStart="true"
    android:inputType="text"
    android:text="@string/tache_urgence"
    android:ems="10" />

  <Button
    android:id="@+id/btn_valider"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    style="@android:style/Widget.Material.Light.Button"
    android:background="@color/colorAccent"
    android:text="@string/action_valider"
    android:textAppearance="@android:style/TextAppearance.Material.Button"
    android:textColor="@color/colorPrimaryTextLight"/>

</RelativeLayout>
